1-ая ЛР по ЭВТ готова

--- a/evt.html
+++ b/evt.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Житкович Руслан 010101</title>
+    <title>ЭВТ</title>
     <link rel="stylesheet" href="css/css.css">
 </head>
 <body>
@@ -16,8 +16,8 @@
     <br>
     <br>
     <ul>
-        <a href ="evt.html"><li><i class="fa-solid fa-house"></i> ЭВТ</li></a>
-        <a href ="inis.html"><li><i class="fa-solid fa-book"></i> ИНИС</li></a>
+        <a href ="index.html"><li><i class="fa-solid fa-house"></i> На главную</li></a>
+        <a href ="evt/lab1/first_lab.html"><li><i class="fa-solid fa-house"></i> ЛР 1 |   "Фильмы"</li></a>
     </ul>
 </aside>
 <main>
