--- a/evt/lab1/first_lab.html
+++ b/evt/lab1/first_lab.html
@@ -7,10 +7,12 @@
 <body>
 <h1>Мои любимые фильмы</h1>
 <ul>
-  <li><a href ="#">Брат</a></li>
-  <li><a href ="#">Пираммида</a></li>
-  <li><a href ="#">Брат 2</a></li>
+  <li><a href ="#brat">Брат</a></li>
+  <li><a href ="#pyramid">Пираммида</a></li>
+  <li><a href ="#brat2">Брат 2</a></li>
 </ul>
+
+<p><a name="brat"></a></p>
 <h2>Брат</h2>
 <h3>Краткое содержание фильма</h3>
 <p>Картина «Брат» рассказывает о простом русском парне Даниле Багрове (Сергей Бодров-младший),
@@ -44,6 +46,7 @@
   </tr>
 </table>
 
+<p><a name="pyramid"></a></p>
 <h2>ПираМММида</h2>
 
 <h3>Краткое содержание фильма</h3>
@@ -82,7 +85,7 @@
 </table>
 
 
-
+<p><a name="brat2"></a></p>
 <h2>Брат 2</h2>
 
 <h3>Краткое содержание фильма</h3>
