Сдела первую лабу INIS

--- a/inis.html
+++ b/inis.html
@@ -19,6 +19,7 @@
   <br>
   <ul>
     <a href ="index.html"><li><i class="fa-solid fa-house"></i> На главную</li></a>
+    <a href ="inis/lab1/lab1.html"><li><i class="fa-solid fa-house"></i> 1 ЛР</li></a>
 
   </ul>
 </aside>
