--- a/evt/lab2/index.html
+++ b/evt/lab2/index.html
@@ -7,16 +7,67 @@
 </head>
 <body>
 
-<header class="header">
-
-  <div class="menu">
-
-        <h2>Инженерная психология (ИНиС)</h2>
 
 
+      <header class="header">
+          <nav class="menu__top">
+              <ul class="menu__ul">
+                  <li class="menu__li"><img src="img/logo.png" width="150" height="50" alt=""></li>
+                  <li class="menu__li"><h2>Инженерная психология (ИНиС)</h2></li>
+              </ul>
 
-  </div>
-</header>
+          </nav>
+
+          <nav class="menu__down">
+              <ul class="menu__ul">
+                  <li class="menu__li"><p>Футболки</p></li>
+                  <li class="menu__li"><p>Толстовки</p></li>
+                  <li class="menu__li"><p>Создай дизайн</p></li>
+                  <li class="menu__li"><p>О нас</p></li>
+                  <li class="menu__li"><p>Войти в аккаунт</p></li>
+              </ul>
+          </nav>
+
+      </header>
+
+
+
+    <main class="main">
+
+        <div class="center"><img src="img/home.png" alt=""></div>
+        <div class="under__center">
+            <div class="border1">
+                <h3>Мы не поставляем майки. Нас нет.</h3>
+                <p>Мы продаём майки. Мы любим делать это, но имейте в виду,
+                    что у нас нет инфраструктуры, цепи поставок или производства,
+                    чтобы на самом деле их изготавливать или поставлять. Но эти
+                    майки всегда будут в вашем воображении. :-)</p>
+            </div>
+
+        </div>
+
+
+
+
+
+    </main>
+
+
+
+   <footer class = "footer">
+       <nav class="menu__down" style="background: darkblue; color:white;">
+           <ul class="menu__ul">
+               <li class="menu__li"><p>Наши контакты</p></li>
+               <li class="menu__li"><p>Где мы расположены</p></li>
+               <li class="menu__li"><p>Политика конфиденциальности</p></li>
+               <li class="menu__li"><p>Вакансии</p></li>
+               <li class="menu__li"><p>Отзывы</p></li>
+           </ul>
+
+       </nav>
+   </footer>
+
+
 
 
 
