Change css and html in "evt 2 LAB" It's necessary to use float so I will do it after this commit

--- a/evt/lab2/index.html
+++ b/evt/lab2/index.html
@@ -8,8 +8,10 @@
 <body>
 
 
+<div class="top_top"></div>
 
       <header class="header">
+
           <nav class="menu__top">
               <ul class="menu__ul">
                   <li class="menu__li"><img src="img/logo.png" width="150" height="50" alt=""></li>
@@ -55,7 +57,7 @@
 
 
    <footer class = "footer">
-       <nav class="menu__down" style="background: darkblue; color:white;">
+       <nav class="menu__down" style=" background: #173064;; color:white;">
            <ul class="menu__ul">
                <li class="menu__li"><p>Наши контакты</p></li>
                <li class="menu__li"><p>Где мы расположены</p></li>
