2 lab evt is finally ready.

--- a/evt/lab2/index.html
+++ b/evt/lab2/index.html
@@ -13,21 +13,16 @@
       <header class="header">
 
           <nav class="menu__top">
-              <ul class="menu__ul">
-                  <li class="menu__li"><img src="img/logo.png" width="150" height="50" alt=""></li>
-                  <li class="menu__li"><h2>Инженерная психология (ИНиС)</h2></li>
-              </ul>
-
+              <a href ="index.html"><ul class="menu__ul"><img src="img/logo.png" width="150" height="50" alt=""></ul></a>
+                  <ul class="menu__ul" style="margin-left: 320px;"><h2>Инженерная психология (ИНиС)</h2></ul>
           </nav>
 
           <nav class="menu__down">
-              <ul class="menu__ul">
-                  <li class="menu__li"><p>Футболки</p></li>
-                  <li class="menu__li"><p>Толстовки</p></li>
-                  <li class="menu__li"><p>Создай дизайн</p></li>
-                  <li class="menu__li"><p>О нас</p></li>
-                  <li class="menu__li"><p>Войти в аккаунт</p></li>
-              </ul>
+              <a href ="error_page.html"><ul class="menu__ul"><p>Футболки</p></ul></a>
+              <a href ="error_page.html"><ul class="menu__ul"><p>Толстовки</p></ul></a>
+              <a href ="error_page.html"><ul class="menu__ul"><p>Создай дизайн</p></ul></a>
+              <a href ="error_page.html"><ul class="menu__ul"><p>О нас</p></ul></a>
+              <a href ="error_page.html"><ul class="menu__ul"><p>Войти в аккаунт</p></ul></a>
           </nav>
 
       </header>
@@ -39,39 +34,33 @@
         <div class="center"><img src="img/home.png" alt=""></div>
         <div class="under__center">
             <div class="border1">
-                <h3>Мы не поставляем майки. Нас нет.</h3>
-                <p>Мы продаём майки. Мы любим делать это, но имейте в виду,
+                <h2>Мы не поставляем майки. Нас нет.</h2>
+                <p> Мы продаём майки. Мы любим делать это, но имейте в виду,
                     что у нас нет инфраструктуры, цепи поставок или производства,
                     чтобы на самом деле их изготавливать или поставлять. Но эти
                     майки всегда будут в вашем воображении. :-)</p>
             </div>
 
+            <div class="border1">
+                <h2>Создай майку, но помоги нам сделать это.</h2>
+                <p>Хоть мы и не продаём майки, но мы даем возможность создать свою собственную! На самом деле.
+                Мы действительно нуждаемся в вашей помощи, чтобы создать это. Если ты можешь создать интерфейс, в
+                котором можно создать свой дизайн майки, это будет отлично!</p>
+            </div>
         </div>
-
-
-
-
-
     </main>
 
 
 
    <footer class = "footer">
-       <nav class="menu__down" style=" background: #173064;; color:white;">
-           <ul class="menu__ul">
-               <li class="menu__li"><p>Наши контакты</p></li>
-               <li class="menu__li"><p>Где мы расположены</p></li>
-               <li class="menu__li"><p>Политика конфиденциальности</p></li>
-               <li class="menu__li"><p>Вакансии</p></li>
-               <li class="menu__li"><p>Отзывы</p></li>
-           </ul>
-
+       <nav class="menu__down" style=" background: #173064; color:white;">
+           <a href ="error_page.html"><ul class="menu__ul"><p>Наши контакты</p></ul></a>
+           <a href ="error_page.html"><ul class="menu__ul"><p>Где мы расположены</p></ul></a>
+           <a href ="error_page.html"><ul class="menu__ul"><p>Политика конфиденциальности</p></ul></a>
+           <a href ="error_page.html"> <ul class="menu__ul"><p>Вакансии</p></ul></a>
+           <a href ="error_page.html"><ul class="menu__ul"><p>Отзывы</p></ul></a>
        </nav>
    </footer>
-
-
-
-
 
 </body>
 </html>
