Make navigation between labs EVT

--- a/evt.html
+++ b/evt.html
@@ -18,6 +18,7 @@
     <ul>
         <a href ="index.html"><li><i class="fa-solid fa-house"></i> На главную</li></a>
         <a href ="evt/lab1/first_lab.html"><li><i class="fa-solid fa-house"></i> ЛР 1 |   "Фильмы"</li></a>
+        <a href ="evt/lab2/second_lab_index.html"><li><i class="fa-solid fa-house"></i> ЛР 2 |   "Футболки"</li></a>
     </ul>
 </aside>
 <main>
