--- a/evt/lab2/second_lab_index.html
+++ b/evt/lab2/second_lab_index.html
@@ -13,7 +13,7 @@
       <header class="header">
 
           <nav class="menu__top">
-              <a href ="index.html"><ul class="menu__ul"><img src="img/logo.png" width="150" height="50" alt=""></ul></a>
+              <a href ="second_lab_index.html"><ul class="menu__ul"><img src="img/logo.png" width="150" height="50" alt=""></ul></a>
                   <ul class="menu__ul" style="margin-left: 320px;"><h2>Инженерная психология (ИНиС)</h2></ul>
           </nav>
 
