--- a/inis.html
+++ b/inis.html
@@ -20,6 +20,7 @@
   <ul>
     <a href ="index.html"><li><i class="fa-solid fa-house"></i> На главную</li></a>
     <a href ="inis/lab1/lab1.html"><li><i class="fa-solid fa-house"></i> 1 ЛР</li></a>
+    <a href ="inis/lab2/lab2.html"><li><i class="fa-solid fa-house"></i> 2 ЛР</li></a>
 
   </ul>
 </aside>
