Third lab EVT is fully ready

--- a/evt/lab3/3_lab_EVT.html
+++ b/evt/lab3/3_lab_EVT.html
@@ -8,126 +8,87 @@
     <title>Flex</title>
 </head>
 <body>
-
     <header>
         <h1>Изучаем flexbox</h1>
     </header>
 
 
 
-<div class="container">
-
-    <div class="container1">
-        <div class="item1">
-            <article>
-                <h2>1</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, perspiciatis quo praesentium harum quibusdam nostrum aliquam voluptates ullam aliquid, dolor consectetur expedita, nisi mollitia reiciendis deleniti sit natus quos est.
-                </p>
-            </article>
-
-        </div>
-
-
-      <div class="item7">
-
-
-            <article>
-                <h2>7</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, perspiciatis quo praesentium harum quibusdam nostrum aliquam voluptates ullam aliquid, dolor consectetur expedita, nisi mollitia reiciendis deleniti sit natus quos est.
-                </p>
-            </article>
-      </div>
+<div class="section1">
 
 
 
-        <div class="item9">
-            <article>
-                <h2>9</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, perspiciatis quo praesentium harum quibusdam nostrum aliquam voluptates ullam aliquid, dolor consectetur expedita, nisi mollitia reiciendis deleniti sit natus quos est.
-                </p>
-            </article>
-        </div>
+    <article>
+        <h2>1</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, perspiciatis quo praesentium harum quibusdam nostrum aliquam voluptates ullam aliquid, dolor consectetur expedita, nisi mollitia reiciendis deleniti sit natus quos est.
+        </p>
+    </article>
+    <article>
+        <h2>2</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, perspiciatis quo praesentium harum quibusdam nostrum aliquam voluptates ullam aliquid, dolor consectetur expedita, nisi mollitia reiciendis deleniti sit natus quos est.
+        </p>
+    </article>
+    <article>
+        <h2>3</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, perspiciatis quo praesentium harum quibusdam nostrum aliquam voluptates ullam aliquid, dolor consectetur expedita, nisi mollitia reiciendis deleniti sit natus quos est.
+        </p>
+    </article>
     </div>
 
+        <div class="section2">
 
-    <div class="container2">
-        <div class="item1">
+   <div class="section4-6">
+
+
+    <article>
+        <h2>4</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, perspiciatis quo praesentium harum quibusdam nostrum aliquam voluptates ullam aliquid, dolor consectetur expedita, nisi mollitia reiciendis deleniti sit natus quos est.
+        </p>
+    </article>
+    <article>
+        <h2>5</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, perspiciatis quo praesentium harum quibusdam nostrum aliquam voluptates ullam aliquid, dolor consectetur expedita, nisi mollitia reiciendis deleniti sit natus quos est.
+        </p>
+    </article>
+    <article>
+        <h2>6</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, perspiciatis quo praesentium harum quibusdam nostrum aliquam voluptates ullam aliquid, dolor consectetur expedita, nisi mollitia reiciendis deleniti sit natus quos est.
+        </p>
+    </article>
+            </div>
+
+           <div class="section7-10">
+
+            <div class="section7-8">
+
+
+    <article>
+        <h2>7</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, perspiciatis quo praesentium harum quibusdam nostrum aliquam voluptates ullam aliquid, dolor consectetur expedita, nisi mollitia reiciendis deleniti sit natus quos est.
+        </p>
+    </article><article>
+        <h2>8</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, perspiciatis quo praesentium harum quibusdam nostrum aliquam voluptates ullam aliquid, dolor consectetur expedita, nisi mollitia reiciendis deleniti sit natus quos est.
+        </p>
+    </article>
+                 </div>
+
+            <div class="section9-10">
+
+
             <article>
-                <h2>2</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, perspiciatis quo praesentium harum quibusdam nostrum aliquam voluptates ullam aliquid, dolor consectetur expedita, nisi mollitia reiciendis deleniti sit natus quos est.
-                </p>
-            </article>
-
-        </div>
-
-
-        <div class="item2">
-
-
-            <article>
-                <h2>8</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, perspiciatis quo praesentium harum quibusdam nostrum aliquam voluptates ullam aliquid, dolor consectetur expedita, nisi mollitia reiciendis deleniti sit natus quos est.
-                </p>
-            </article>
-        </div>
-
-
-
-        <div class="item9">
-            <article>
-                <h2>10</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, perspiciatis quo praesentium harum quibusdam nostrum aliquam voluptates ullam aliquid, dolor consectetur expedita, nisi mollitia reiciendis deleniti sit natus quos est.
-                </p>
-            </article>
-        </div>
-    </div>
-
-
-
-<div class="container3">
-    <div class="item3">
-        <article>
-            <h2>3</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, perspiciatis quo praesentium harum quibusdam nostrum aliquam voluptates ullam aliquid, dolor consectetur expedita, nisi mollitia reiciendis deleniti sit natus quos est.
-            </p>
-        </article>
-
-    </div>
-
-
-    <div class="item6">
-
-
-        <article>
-            <h2>6</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, perspiciatis quo praesentium harum quibusdam nostrum aliquam voluptates ullam aliquid, dolor consectetur expedita, nisi mollitia reiciendis deleniti sit natus quos est.
-            </p>
-        </article>
-    </div>
-
-
-
-    <div class="item5">
-        <article>
-            <h2>5</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, perspiciatis quo praesentium harum quibusdam nostrum aliquam voluptates ullam aliquid, dolor consectetur expedita, nisi mollitia reiciendis deleniti sit natus quos est.
-            </p>
-        </article>
-    </div>
-
-    <div class="item4">
-        <article>
-            <h2>4</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, perspiciatis quo praesentium harum quibusdam nostrum aliquam voluptates ullam aliquid, dolor consectetur expedita, nisi mollitia reiciendis deleniti sit natus quos est.
-            </p>
-        </article>
-    </div>
+        <h2>9</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, perspiciatis quo praesentium harum quibusdam nostrum aliquam voluptates ullam aliquid, dolor consectetur expedita, nisi mollitia reiciendis deleniti sit natus quos est.
+        </p>
+    </article><article>
+        <h2>10</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, perspiciatis quo praesentium harum quibusdam nostrum aliquam voluptates ullam aliquid, dolor consectetur expedita, nisi mollitia reiciendis deleniti sit natus quos est.
+        </p>
+    </article>
+            </div>
+               </div>
 </div>
 
 
-
-
-
-</div>
 </body>
 </html>
