--- a/evt.html
+++ b/evt.html
@@ -19,6 +19,7 @@
         <a href ="index.html"><li><i class="fa-solid fa-house"></i> На главную</li></a>
         <a href ="evt/lab1/first_lab.html"><li><i class="fa-solid fa-house"></i> ЛР 1 |   "Фильмы"</li></a>
         <a href ="evt/lab2/second_lab_index.html"><li><i class="fa-solid fa-house"></i> ЛР 2 |   "Футболки"</li></a>
+        <a href ="evt/lab3/3_lab_EVT.html"><li><i class="fa-solid fa-house"></i> ЛР 3 |   "Flex"</li></a>
     </ul>
 </aside>
 <main>
