Make hyperlink to 4 lab EVT

--- a/evt.html
+++ b/evt.html
@@ -20,6 +20,7 @@
         <a href ="evt/lab1/first_lab.html"><li><i class="fa-solid fa-house"></i> ЛР 1 |   "Фильмы"</li></a>
         <a href ="evt/lab2/second_lab_index.html"><li><i class="fa-solid fa-house"></i> ЛР 2 |   "Футболки"</li></a>
         <a href ="evt/lab3/3_lab_EVT.html"><li><i class="fa-solid fa-house"></i> ЛР 3 |   "Flex"</li></a>
+        <a href ="evt/lab4/4_lab_EVT.html"><li><i class="fa-solid fa-house"></i> ЛР 4 |   "Grid"</li></a>
     </ul>
 </aside>
 <main>
