--- a/inis/lab3/index.html
+++ b/inis/lab3/index.html
@@ -21,10 +21,7 @@
                   <ul class="menu__ul" style="margin-left: 320px;"><h2>Инженерная психология (ИНиС)</h2></ul>
           </nav>
 
-          <nav class="menu__down">
-
-          </nav>
-
+          <nav class="menu__down"></nav>
       </header>
 
 
@@ -32,7 +29,11 @@
     <main class="main">
 
 
-        <script src="shirts.js"></script>
+        <div class="box">
+            <img src="shirt_images/beepboop-blue-back.png" >
+            <h3>Beep boop</h3>
+            <button></button>
+        </div>
 
     </main>
 
