3 lab INIS is in process...

--- a/inis/lab3/index.html
+++ b/inis/lab3/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Лабораторная 2</title>
   <link rel="stylesheet" href="css.css">
+    <script src = "shirts.js" defer></script>
 </head>
 <body>
 
@@ -29,11 +30,7 @@
     <main class="main">
 
 
-        <div class="box">
-            <img src="shirt_images/beepboop-blue-back.png" >
-            <h3>Beep boop</h3>
-            <button></button>
-        </div>
+     <p id = "out"></p>
 
     </main>
 
