--- a/inis/lab3/index.html
+++ b/inis/lab3/index.html
@@ -28,15 +28,23 @@
 
 
     <main class="main">
-
-
      <div class id = "out"></div>
-
     </main>
 
 
 
-   <footer class = "footer">
+      <div id = "myModal" class="modal">
+          <div class="modal-content">
+              <h1>Modal window</h1>
+              <div class="out2"></div>
+          </div>
+      </div>
+
+
+
+
+
+    <footer class = "footer">
        <nav class="menu__down" style=" background: #173064; color:white;">
            <a href ="error_page.html"><ul class="menu__ul"><p>Contact Us</p></ul></a>
            <a href ="error_page.html"><ul class="menu__ul"><p>Site map</p></ul></a>
