--- a/inis/lab3/index.html
+++ b/inis/lab3/index.html
@@ -34,7 +34,7 @@
 
 
       <div id = "myModal" class="modal">
-          <div class="modal-content">
+          <div class="modal-content" id = "quick_out">
               <h1>Modal window</h1>
               <div class="out2"></div>
           </div>
