3 lab inis is ready

--- a/inis/lab3-4/index.html
+++ b/inis/lab3-4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Лабораторная 2</title>
+    <title>Инис 3 </title>
   <link rel="stylesheet" href="css.css">
     <script src = "shirts.js" defer></script>
 </head>
@@ -14,31 +14,27 @@
 
 
 <div class="top_top"></div>
-
       <header class="header">
-
           <nav class="menu__top">
               <a href ="second_lab_index.html"><ul class="menu__ul"><img src="img/logo.png" width="150" height="50" alt=""></ul></a>
                   <ul class="menu__ul" style="margin-left: 320px;"><h2>Инженерная психология (ИНиС)</h2></ul>
           </nav>
-
           <nav class="menu__down"></nav>
       </header>
 
-
-
     <main class="main">
+
      <div class id = "out"></div>
+
     </main>
 
-
-
       <div id = "myModal" class="modal">
-          <div class="modal-content" id = "quick_out">
-              <h1>Modal window</h1>
-              <div class="out2"></div>
-          </div>
+          <div class="modal-content" id = "quick_out"></div>
       </div>
+
+    <div id = "myModal2" class="modal">
+        <div class="modal-content" id = "see_page"></div>
+    </div>
 
 
 
