--- a/inis.html
+++ b/inis.html
@@ -21,6 +21,7 @@
     <a href ="index.html"><li><i class="fa-solid fa-house"></i> На главную</li></a>
     <a href ="inis/lab1/lab1.html"><li><i class="fa-solid fa-house"></i> 1 ЛР</li></a>
     <a href ="inis/lab2/lab2.html"><li><i class="fa-solid fa-house"></i> 2 ЛР</li></a>
+    <a href ="inis/lab3-4/index.html"><li><i class="fa-solid fa-house"></i> 3 ЛР</li></a>
 
   </ul>
 </aside>
