--- a/inis/lab3-4/details.html
+++ b/inis/lab3-4/details.html
@@ -41,7 +41,7 @@
     let variable3 = localStorage.getItem('3');
     let variable4 = localStorage.getItem('4');
     let variable5 = localStorage.getItem('5');
-    let variable6 = localStorage.getItem('6');
+
 
 
     info += '<h1>'+name+ '</h1>' + '<br>';
@@ -52,6 +52,7 @@
     if (variable1 != null)
     {
         info += '<button id = "btn1" style="background:'+ variable1 +'"' +'>' + variable1+ '</button>' + '<br>';
+
     }
 
     if (variable2 != null)
@@ -66,23 +67,47 @@
 
     if (variable4 != null)
     {
-        info += '<button id = "btn4" style="background:'+ variable4 +'"' +'>' + variable4+ '</button>' + '<br>';
+        info += '<button type = "button" onclick="buttonClick4(this)" id = "btn4"  style="background:'+ variable4 +'"' +'>' + variable4+ '</button>' + '<br>';
+        function buttonClick4()
+        {
+
+            info = info.replaceAll('<img id = "img4" src = ' + localStorage.getItem('yellow_front') + '></img>', '');
+            info = info.replaceAll('<img id ="img5" src = ' + localStorage.getItem('red_front') + '></img>', '');
+
+                info += '<img id = "img4" src = ' + localStorage.getItem('yellow_front') + '></img>';
+
+
+                console.log(info);
+
+                console.log(info);
+
+
+
+
+            document.getElementById('see_page2').innerHTML=info;
+
+
+        }
+
     }
 
     if (variable5 != null)
     {
-        info += '<button  id = "btn5"  style="background:'+ variable5 +'"' +'>' + variable5+ '</button>' + '<br>';
+        info += '<button type = "button" onclick="buttonClick5(this)" id = "btn5"  style="background:'+ variable5 +'"' +'>' + variable5+ '</button>' + '<br>';
+        function buttonClick5()
+        {
+            let a = '';
+            a = '<img id ="img5" src = ' + localStorage.getItem('red_front') + '></img>';
 
-    }
+            info = info.replaceAll('<img id = "img4" src = ' + localStorage.getItem('yellow_front') + '></img>', '');
+            info = info.replaceAll('<img id ="img5" src = ' + localStorage.getItem('red_front') + '></img>', '');
 
-    if (variable6 != null)
-    {
-        info += '<button id = "btn6" style="background:'+ variable6 +'"' +'>' + variable6+ '</button>' + '<br>';
-        var btn6 = document.querySelectorAll('button.btn6');
+            info += a;
 
 
+           document.getElementById('see_page2').innerHTML=info;
 
-
+        }
 
     }
 
