--- a/inis/lab3-4/details.html
+++ b/inis/lab3-4/details.html
@@ -12,8 +12,26 @@
             border: 3.5px solid;
             color: black;
             background-color: #4CAF50; /* Green */
-
             border-radius: 12px;
+        }
+
+        .color-view{
+            margin-top: 40px;
+            margin-bottom: 40px;
+            display: flex;
+            margin-left: 120px;
+
+        }
+
+        .content{
+            margin-left: 20px;
+            border: 3.5px solid;
+            height: 500px;
+            width: 500px;
+        }
+
+        .side{
+            background: blanchedalmond;
         }
     </style>
 </head>
@@ -35,6 +53,7 @@
 
     let price = localStorage.getItem('price');
     let name = '<h1>'+localStorage.getItem('name')+'</h1>';
+    let image = localStorage.getItem('image');
 
     let variable1 = localStorage.getItem('1');
     let variable2 = localStorage.getItem('2');
@@ -46,88 +65,220 @@
 
     info += '<h1>'+name+ '</h1>' + '<br>';
     info += '<h3>' + price + '</h3>' + '<br>';
+    info += '<button type = "button" onclick="buttonClickFront(this)" id = "frontBtn" class = "side">Front</button>'+ '<button type = "button" onclick="buttonClickBack(this)" id = "backBtn" class = "side">Back</button>'+ '<br>';
 
+
+
+
+
+
+    function buttonClickFront()
+    {
+        info = info.replaceAll('<img class ="color-view" id = "img1" src = ' + localStorage.getItem(variable1+'_front') + '></img>', '');
+        info = info.replaceAll('<img class ="color-view" id = "img2" src = ' + localStorage.getItem(variable2+'_front') + '></img>', '');
+        info = info.replaceAll('<img class ="color-view" id = "img3" src = ' + localStorage.getItem(variable3+'_front') + '></img>', '');
+        info = info.replaceAll('<img class ="color-view" id = "img4" src = ' + localStorage.getItem(variable4+'_front') + '></img>', '');
+        info = info.replaceAll('<img class ="color-view" id = "img5" src = ' + localStorage.getItem(variable5+'_front') + '></img>', '');
+
+        info = info.replaceAll('<img class ="color-view" id = "img1" src = ' + localStorage.getItem(variable1+'_back') + '></img>', '');
+        info = info.replaceAll('<img class ="color-view" id = "img2" src = ' + localStorage.getItem(variable2+'_back') + '></img>', '');
+        info = info.replaceAll('<img class ="color-view" id = "img3" src = ' + localStorage.getItem(variable3+'_back') + '></img>', '');
+        info = info.replaceAll('<img class ="color-view" id = "img4" src = ' + localStorage.getItem(variable4+'_back') + '></img>', '');
+        info = info.replaceAll('<img class ="color-view" id = "img5" src = ' + localStorage.getItem(variable5+'_back') + '></img>', '');
+
+
+
+
+
+        info += '<img class ="color-view" id = "img4" src = ' + localStorage.getItem(variable4+'_front') + '></img>';
+
+
+        document.getElementById('see_page2').innerHTML=info;
+    }
+
+    function buttonClickBack()
+    {
+        info = info.replaceAll('<img class ="color-view" id = "img1" src = ' + localStorage.getItem(variable1+'_front') + '></img>', '');
+        info = info.replaceAll('<img class ="color-view" id = "img2" src = ' + localStorage.getItem(variable2+'_front') + '></img>', '');
+        info = info.replaceAll('<img class ="color-view" id = "img3" src = ' + localStorage.getItem(variable3+'_front') + '></img>', '');
+        info = info.replaceAll('<img class ="color-view" id = "img4" src = ' + localStorage.getItem(variable4+'_front') + '></img>', '');
+        info = info.replaceAll('<img class ="color-view" id = "img5" src = ' + localStorage.getItem(variable5+'_front') + '></img>', '');
+
+        info = info.replaceAll('<img class ="color-view" id = "img1" src = ' + localStorage.getItem(variable1+'_back') + '></img>', '');
+        info = info.replaceAll('<img class ="color-view" id = "img2" src = ' + localStorage.getItem(variable2+'_back') + '></img>', '');
+        info = info.replaceAll('<img class ="color-view" id = "img3" src = ' + localStorage.getItem(variable3+'_back') + '></img>', '');
+        info = info.replaceAll('<img class ="color-view" id = "img4" src = ' + localStorage.getItem(variable4+'_back') + '></img>', '');
+        info = info.replaceAll('<img class ="color-view" id = "img5" src = ' + localStorage.getItem(variable5+'_back') + '></img>', '');
+
+
+
+
+
+
+
+
+        info += '<img class ="color-view" id = "img4" src = ' + localStorage.getItem(variable4+'_back') + '></img>';
+        document.getElementById('see_page2').innerHTML=info;
+    }
 
 
     if (variable1 != null)
     {
-        info += '<button id = "btn1" style="background:'+ variable1 +'"' +'>' + variable1+ '</button>' + '<br>';
+
+
+        info +='Colors' + '<button type = "button" onclick="buttonClick1(this)" id = "btn1"  style="background:'+ variable1 +'"' +'>' + variable1+ '</button>' ;
+
+        function buttonClick1()
+        {
+            info = info.replaceAll('<img class ="color-view" id = "img1" src = ' + localStorage.getItem(variable1+'_front') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img2" src = ' + localStorage.getItem(variable2+'_front') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img3" src = ' + localStorage.getItem(variable3+'_front') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img4" src = ' + localStorage.getItem(variable4+'_front') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img5" src = ' + localStorage.getItem(variable5+'_front') + '></img>', '');
+
+            info = info.replaceAll('<img class ="color-view" id = "img1" src = ' + localStorage.getItem(variable1+'_back') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img2" src = ' + localStorage.getItem(variable2+'_back') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img3" src = ' + localStorage.getItem(variable3+'_back') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img4" src = ' + localStorage.getItem(variable4+'_back') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img5" src = ' + localStorage.getItem(variable5+'_back') + '></img>', '');
+
+
+
+
+            info += '<img class ="color-view" id = "img1" src = ' + localStorage.getItem(variable1+'_front') + '></img>';
+            document.getElementById('see_page2').innerHTML=info;
+
+
+            localStorage.setItem('key', '1');
+
+
+
+        }
 
     }
 
     if (variable2 != null)
     {
-        info += '<button id = "btn2" style="background:'+ variable2 +'"' +'>' + variable2+ '</button>' + '<br>';
-    }
-
-    if (variable3 != null)
-    {
-        info += '<button id = "btn3" style="background:'+ variable3 +'"' +'>' + variable3+ '</button>' + '<br>';
-    }
-
-    if (variable4 != null)
-    {
-        info += '<button type = "button" onclick="buttonClick4(this)" id = "btn4"  style="background:'+ variable4 +'"' +'>' + variable4+ '</button>' + '<br>';
-        function buttonClick4()
+        info += '<button type = "button" onclick="buttonClick2(this)" id = "btn2"  style="background:'+ variable2 +'"' +'>' + variable2+ '</button>' ;
+        function buttonClick2()
         {
+            info = info.replaceAll('<img class ="color-view" id = "img1" src = ' + localStorage.getItem(variable1+'_front') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img2" src = ' + localStorage.getItem(variable2+'_front') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img3" src = ' + localStorage.getItem(variable3+'_front') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img4" src = ' + localStorage.getItem(variable4+'_front') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img5" src = ' + localStorage.getItem(variable5+'_front') + '></img>', '');
 
-            info = info.replaceAll('<img id = "img4" src = ' + localStorage.getItem('yellow_front') + '></img>', '');
-            info = info.replaceAll('<img id ="img5" src = ' + localStorage.getItem('red_front') + '></img>', '');
-
-                info += '<img id = "img4" src = ' + localStorage.getItem('yellow_front') + '></img>';
-
-
-                console.log(info);
-
-                console.log(info);
+            info = info.replaceAll('<img class ="color-view" id = "img1" src = ' + localStorage.getItem(variable1+'_back') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img2" src = ' + localStorage.getItem(variable2+'_back') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img3" src = ' + localStorage.getItem(variable3+'_back') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img4" src = ' + localStorage.getItem(variable4+'_back') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img5" src = ' + localStorage.getItem(variable5+'_back') + '></img>', '');
 
 
+            info += '<img class ="color-view" id = "img2" src = ' + localStorage.getItem(variable2+'_front') + '></img>';
 
+
+
+            localStorage.setItem('key', '2');
 
             document.getElementById('see_page2').innerHTML=info;
 
 
         }
+    }
 
+    if (variable3 != null)
+    {
+        info += '<button type = "button" onclick="buttonClick3(this)" id = "btn3"  style="background:'+ variable3 +'"' +'>' + variable3+ '</button>';
+        function buttonClick3()
+        {
+            info = info.replaceAll('<img class ="color-view" id = "img1" src = ' + localStorage.getItem(variable1+'_front') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img2" src = ' + localStorage.getItem(variable2+'_front') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img3" src = ' + localStorage.getItem(variable3+'_front') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img4" src = ' + localStorage.getItem(variable4+'_front') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img5" src = ' + localStorage.getItem(variable5+'_front') + '></img>', '');
+
+            info = info.replaceAll('<img class ="color-view" id = "img1" src = ' + localStorage.getItem(variable1+'_back') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img2" src = ' + localStorage.getItem(variable2+'_back') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img3" src = ' + localStorage.getItem(variable3+'_back') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img4" src = ' + localStorage.getItem(variable4+'_back') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img5" src = ' + localStorage.getItem(variable5+'_back') + '></img>', '');
+
+            info += '<img class ="color-view" id = "img3" src = ' + localStorage.getItem(variable3+'_front') + '></img>';
+
+
+
+            localStorage.setItem('key', '3');
+
+            document.getElementById('see_page2').innerHTML=info;
+
+
+        }
+    }
+
+    if (variable4 != null)
+    {
+        info += '<button type = "button" onclick="buttonClick4(this)" id = "btn4"  style="background:'+ variable4 +'"' +'>' + variable4+ '</button>';
+        function buttonClick4()
+        {
+
+            info = info.replaceAll('<img class ="color-view" id = "img1" src = ' + localStorage.getItem(variable1+'_front') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img2" src = ' + localStorage.getItem(variable2+'_front') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img3" src = ' + localStorage.getItem(variable3+'_front') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img4" src = ' + localStorage.getItem(variable4+'_front') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img5" src = ' + localStorage.getItem(variable5+'_front') + '></img>', '');
+
+            info = info.replaceAll('<img class ="color-view" id = "img1" src = ' + localStorage.getItem(variable1+'_back') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img2" src = ' + localStorage.getItem(variable2+'_back') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img3" src = ' + localStorage.getItem(variable3+'_back') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img4" src = ' + localStorage.getItem(variable4+'_back') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img5" src = ' + localStorage.getItem(variable5+'_back') + '></img>', '');
+
+
+
+            //console.log(localStorage.getItem(variable4+'_front'));
+
+            info += '<img class ="color-view" id = "img4" src = ' + localStorage.getItem(variable4+'_front') + '></img>';
+
+            localStorage.setItem('key','4');
+
+            document.getElementById('see_page2').innerHTML=info;
+        }
     }
 
     if (variable5 != null)
     {
-        info += '<button type = "button" onclick="buttonClick5(this)" id = "btn5"  style="background:'+ variable5 +'"' +'>' + variable5+ '</button>' + '<br>';
+        info += '<button type = "button" onclick="buttonClick5(this)" id = "btn5"  style="background:'+ variable5 +'"' +'>' + variable5+ '</button>' ;
+
         function buttonClick5()
         {
-            let a = '';
-            a = '<img id ="img5" src = ' + localStorage.getItem('red_front') + '></img>';
+            info = info.replaceAll('<img class ="color-view" id = "img1" src = ' + localStorage.getItem(variable1+'_front') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img2" src = ' + localStorage.getItem(variable2+'_front') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img3" src = ' + localStorage.getItem(variable3+'_front') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img4" src = ' + localStorage.getItem(variable4+'_front') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img5" src = ' + localStorage.getItem(variable5+'_front') + '></img>', '');
 
-            info = info.replaceAll('<img id = "img4" src = ' + localStorage.getItem('yellow_front') + '></img>', '');
-            info = info.replaceAll('<img id ="img5" src = ' + localStorage.getItem('red_front') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img1" src = ' + localStorage.getItem(variable1+'_back') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img2" src = ' + localStorage.getItem(variable2+'_back') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img3" src = ' + localStorage.getItem(variable3+'_back') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img4" src = ' + localStorage.getItem(variable4+'_back') + '></img>', '');
+            info = info.replaceAll('<img class ="color-view" id = "img5" src = ' + localStorage.getItem(variable5+'_back') + '></img>', '');
 
-            info += a;
+
+            info += '<img class ="color-view" id = "img5" src = ' + localStorage.getItem(variable5+'_front') + '></img>';
+
+            localStorage.setItem('key','5');
 
 
            document.getElementById('see_page2').innerHTML=info;
-
         }
-
     }
-
-
-
-
-
-
-
-
-
-
 
     document.getElementById('see_page2').innerHTML=info;
     localStorage.removeItem('name');
     localStorage.removeItem('price');
 
-
 </script>
-
 
 </body>
 </html>
